--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "typeorm": "ts-node-dev ./node_modules/typeorm/cli",
     "migration": "yarn typeorm migration:create",
     "migrate": "yarn typeorm migration:run",
-    "test": "NODE_ENV=test jest"
+    "test": "env-cmd jest"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
@@ -18,10 +18,10 @@
     "jsonwebtoken": "^8.5.1",
     "pg": "^8.5.1",
     "reflect-metadata": "^0.1.13",
+    "supertest": "^6.2.4",
     "tsyringe": "^4.5.0",
     "typeorm": "^0.2.31",
-    "uuid": "^8.3.2",
-    "supertest": "^6.2.4"
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
@@ -34,6 +34,7 @@
     "@types/uuid": "^8.3.0",
     "@typescript-eslint/eslint-plugin": "^5.27.1",
     "@typescript-eslint/parser": "^5.27.1",
+    "env-cmd": "^10.1.0",
     "eslint": "^7.32.0 || ^8.2.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^8.5.0",
