--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "typeorm": "ts-node-dev ./node_modules/typeorm/cli",
     "migration": "yarn typeorm migration:create",
     "migrate": "yarn typeorm migration:run",
-    "test": "env-cmd jest"
+    "test": "NODE_ENV=test env-cmd jest"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
